<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_bg_color"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/login_logo"
            android:drawablePadding="20sp"
            android:gravity="center_vertical"
            android:text="@string/welcome_register"
            android:textColor="@color/logo"
            android:textSize="30sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            style="@style/Smile.TextView._Gray"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/necessary_notice"
            android:textSize="14sp" />
        
        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/phone_imsi"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone_imsi"
                style="@style/Smile.TextView._Gray"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textStyle="bold" />
        </LinearLayout>
        
        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/username"
                android:textStyle="bold" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/necessary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                style="@style/Register_Edit"
                android:hint="@string/username_hint"/>
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/realname"
                android:textStyle="bold" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/necessary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_realname"
                style="@style/Register_Edit"
                android:hint="@string/realname_hint" />
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/password"
                android:textStyle="bold" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/necessary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Register_Edit"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/confirm_password"
                android:textStyle="bold" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/necessary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/Register_Edit"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>
        
        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/phone"
                android:textStyle="bold" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/necessary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/Register_Edit"
                android:hint="@string/phone_hint"
                android:inputType="phone"/>
        </LinearLayout>

        <LinearLayout style="@style/Register_Input" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/necessary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                style="@style/Register_Edit"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        
        <TextView
            style="@style/Smile.TextView._Gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/register_notice"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:text="@string/register"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" 
            android:onClick="btn_register_onclick"/>

    </LinearLayout>

</ScrollView>