<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_bg_color"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/login_logo"
                android:drawablePadding="20sp"
                android:gravity="center_vertical"
                android:text="@string/create_new_channel"
                android:textColor="@color/logo"
                android:textSize="30sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                style="@style/Smile.TextView._Gray"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/necessary_notice"
                android:textSize="14sp" />

            <LinearLayout style="@style/Register_Input" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/manager"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_manager_name"
                    style="@style/Smile.TextView._Gray"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout style="@style/Register_Input" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/channel_name"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/necessary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_channel_name"
                    style="@style/Register_Edit"
                    android:hint="@string/channel_name_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="@dimen/register_margin"
                android:layout_marginRight="@dimen/register_margin"
                android:layout_marginTop="@dimen/register_margin"
                android:background="@drawable/base_edit_input"
                android:orientation="horizontal" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/channel_info"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/necessary"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_channel_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_margin"
                android:layout_marginRight="@dimen/register_margin"
                android:background="@drawable/base_edit_input"
                android:hint="@string/channel_info_hint"
                android:padding="@dimen/register_margin" />

            <TextView
                style="@style/Smile.TextView._Gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:text="@string/create_new_channel_notice"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/btn_create_new_channel"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_login_selector"
                android:onClick="btn_create_new_channel_onclick"
                android:text="@string/create"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>