<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_channel_name"
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:text="@string/channel_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_manager_name"
            style="@style/Smile.TextView._Gray"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/manager_name_format"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_channel_info"
        style="@style/Smile.TextView._Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minLines="1"
        android:maxLines="2"
        android:text="@string/default_text"
        android:textSize="16sp" >
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_time"
            style="@style/Smile.TextView._Gray"
            android:layout_marginTop="10dp"
            android:text="@string/default_number"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/tv_phone"
            style="@style/Smile.TextView._White"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="5dp"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:text="@string/default_number"
            android:textSize="12sp" >
        </TextView>
    </RelativeLayout>

</LinearLayout>