<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="none" 
    android:background="@color/theme_bg_color">

    <LinearLayout
        android:id="@+id/ll_channel_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize" >

        <include layout="@layout/include_channel_detail"/>
        
        <Button
                android:id="@+id/btn_show_signer"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_login_selector"
                android:onClick="btn_show_signer_onclick"
                android:text="@string/show_signer"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
            
            <Button
                android:id="@+id/btn_open_close_channel"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_login_selector"
                android:onClick="btn_open_close_channel_onclick"
                android:text="@string/open_channel"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
            
            <Button
                android:id="@+id/btn_delete_channel"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_logout_selector"
                android:onClick="btn_delete_channel_onclick"
                android:text="@string/delete_channel"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
            
            <Button
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_logout_selector"
                android:onClick="btn_cancel_onclick"
                android:text="@string/cancel"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</ScrollView>