<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_channel_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/channel_not_active_bg"
    android:orientation="vertical"
    android:padding="4dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_signer_realname"
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_signer_username"
            style="@style/Smile.TextView._Gray"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textSize="18sp" 
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/tv_signer_realname"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sign_address"
        style="@style/Smile.TextView._Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minLines="1"
        android:text="@string/default_text"
        android:textSize="16sp" >
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_sign_date"
            style="@style/Smile.TextView._Gray"
            android:text="@string/default_number"
            android:layout_centerVertical="true"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/tv_signer_phone"
            style="@style/Smile.TextView._White"
            android:layout_alignParentRight="true"
            android:background="@color/green"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="5dp"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:text="@string/default_number"
            android:textSize="12sp" >
        </TextView>
    </RelativeLayout>

</LinearLayout>